fix padding on first child wrap elements

--- a/htdocs/components/85_spreadsheet_table.css
+++ b/htdocs/components/85_spreadsheet_table.css
@@ -20,7 +20,8 @@ body.ienew table.fixed { table-layout: auto; }
  
 table.data_table                     { border: 1px solid [[PAGE_TEXT]]; }
 table.data_table th                  { cursor: pointer; padding: 2px 20px 2px 5px; }
-table.data_table th:first-child      { padding-left: 2px; }
+table.data_table th:first-child,
+table.data_table td:first-child.wrap { padding-left: 2px; }
 table.data_table th.sorting_disabled { cursor: text; padding-right: 5px; }
 table.data_table th div              { height: 19px; padding: 3px 0; }
 table.toggle_table th div            { padding: 0; }
